--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,28 @@ body,
 body {
   background: black;
   margin: 0;
-  font-family: 
-  /* "Noto Sans KR",  */ -apple-system, BlinkMacSystemFont,
-    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: "Noto Sans KR", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* body::before {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: -2;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  content: "FILMS";
+  font-size: 20vmin;
+  color: rgba(255, 255, 255, 0.0);
+  background: radial-gradient(rgb(10, 10, 10), black);
+} */
 
 #root {
   overflow: hidden;
